# supertux-launcher-qt

./: .gitmodules  CMakeLists.txt  version.h.in
data/versions/linux32/: v0_6_3.stlv  v0_6_3_beta2.stlv
data/versions/linux64/: v0_6_3.stlv  v0_6_3_beta1.stlv
data/versions/win32/: v0_6_3.stlv  v0_6_3_beta1.stlv  v0_6_3_beta2.stlv
data/versions/win64/: v0_6_3.stlv  v0_6_3_beta1.stlv  v0_6_3_beta2.stlv
src/: main.cpp
src/dialog/: add_instance.cpp  add_instance.hpp  download_dialog.cpp  download_dialog.hpp  instance_configure_install.cpp  instance_configure_install.hpp  instance_install_dialog.cpp  instance_install_dialog.hpp
src/handler/: instance_process_handler.cpp  instance_process_handler.hpp
src/install_method/: appimage.cpp  appimage.hpp  exe_installer.cpp  exe_installer.hpp  install_method.cpp  install_method.hpp  msi_installer.cpp  msi_installer.hpp  source_build.cpp  source_build.hpp  unknown.cpp  unknown.hpp  zip_binary.cpp  zip_binary.hpp
src/instance/: install_method.cpp  install_method.hpp  instance.cpp  instance.hpp  manager.cpp  manager.hpp
src/util/: currenton.hpp  downloader.cpp  downloader.hpp  downloader_defines.hpp  platform.hpp  qt.cpp  qt.hpp  reader_document.cpp  reader_mapping.cpp  reader_mapping.hpp  reader_object.cpp  reader_object.hpp  string.cpp  string.hpp  writer.cpp  writer.hpp
src/version/: manager.cpp  manager.hpp  v063.cpp  v063.hpp  version.cpp  version.hpp
src/widget/: collapse_button.cpp  collapse_button.hpp  form_layout.cpp  form_layout.hpp  instance_list.cpp  instance_list.hpp  instance_options_bar.cpp  instance_options_bar.hpp  log_box.cpp  log_box.hpp  options_bar.cpp  options_bar.hpp  toolbar.cpp  toolbar.hpp
src/widget/element/: tool_button.cpp  tool_button.hpp  widget_tool_button.cpp  widget_tool_button.hpp
src/window/: main.cpp  main.hpp  options_general.cpp  options_general.hpp  options_instance.cpp  options_instance.hpp
